<resources>
    <string name="app_name">My auto</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="continue_without_registration">Continue without registration</string>
    <string name="welcome">Welcome</string>
    <string name="login_info">You can log in to save data to the cloud or use local saving without logging in.</string>
    <string name="password_info">At least 6 characters</string>
    <string name="add_auto">Add auto</string>
    <string name="auto_remove_title">Delete selected vehicle?</string>
    <string name="auto_remove_info">All vehicle records will be deleted</string>
    <string name="delete_title">Deletion</string>
    <string name="delete_confirmation">Delete entry?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="account">Account</string>
    <string name="settings">Settings</string>
    <string name="app_info">About the application</string>
    <string name="more">More</string>
    <string name="upload_server">Upload to server</string>
    <string name="download_server">Download from server</string>
    <string name="download_success">Data downloaded</string>
    <string name="registration_success">Registration successful!</string>
    <string name="error">Error</string>
    <string name="error_enter_email">Please enter email</string>
    <string name="error_enter_password">Please enter password</string>
    <string name="error_invalid_email">Invalid email format</string>
    <string name="error_short_password">Password must be at least 6 characters</string>
    <string name="error_user_not_found">User not found. Please register.</string>
    <string name="error_wrong_password">Wrong password</string>
    <string name="error_email_in_use">Email already in use</string>
    <string name="error_network">No internet connection</string>
    <string name="error_too_many_requests">Too many attempts. Try again later.</string>
    <string name="error_auth">Authentication error</string>
    <string name="error_displaying">Displaying error</string>
    <string name="sedan">Sedan</string>
    <string name="hatchback">Hatchback</string>
    <string name="liftback">Liftback</string>
    <string name="crossover">Crossover</string>
    <string name="suv">SUV</string>
    <string name="universal">Universal</string>
    <string name="minivan">Minivan</string>
    <string name="pickup">Pickup</string>
    <string name="coupe">Coupe</string>
    <string name="cabriolet">Cabriolet</string>
    <string name="toast_add_auto">First, add a car</string>
    <string name="toast_choose_auto">First, select a car</string>
    <string name="toast_choose_category">Choose a category</string>
    <string name="toast_choose_mileage">Enter a mileage</string>
    <string name="toast_enter_title_brand">Enter a name or brand</string>
    <string name="toast_error_time_future">Select a time no later than the current</string>
    <string name="toast_error_time_past">Select a date no earlier than the current</string>
    <string name="toast_error_mileage_empty">Enter the mileage value</string>
    <string name="toast_error_mileage_lower">The new mileage cannot be less than the current</string>
    <string name="notification_permission_title">Notification Permission</string>
    <string name="notification_permission_message">Notification permission required to send maintenance reminders</string>
    <string name="grant_permission">Allow</string>
    <string name="save_without_notify">Save without notifications</string>
    <string name="notification_permission_denied">Notifications are disabled. Reminder will not be sent</string>
    <string name="permission_required_title">Permission required</string>
    <string name="permission_settings_message">Permission has been permanently disabled to send notifications. Please enable it in the app settings</string>
    <string name="brand">Brand</string>
    <string name="insurance_policy">Insurance policy</string>
    <string name="body_type">Body type</string>
    <string name="model">Model</string>
    <string name="year">Year</string>
    <string name="title_fuel">Refueling</string>
    <string name="volume">Volume</string>
    <string name="cost">Сost</string>
    <string name="fuel_price">Price per 1 L</string>
    <string name="discount">Discount</string>
    <string name="date">Date</string>
    <string name="save">Save</string>
    <string name="liter">L</string>
    <string name="ruble" translatable="false">₽</string>
    <string name="km">km</string>
    <string name="mileage">Mileage</string>
    <string name="mileage_change">Mileage change</string>
    <string name="mileage_current">Current mileage</string>
    <string name="update">Update</string>
    <string name="sort_date">By date</string>
    <string name="sort_volume">By volume</string>
    <string name="sort_cost">By cost</string>
    <string name="sort_category">By category</string>
    <string name="title_stat">Statistic</string>
    <string name="week_stat">Per week</string>
    <string name="month_stat">Per month</string>
    <string name="year_stat">Per year</string>
    <string name="daily_statistics">Expenses by day, ₽</string>
    <string name="category_statistics">Expenses by category, ₽</string>
    <string name="choose_period">Choose period</string>
    <string name="selected_period">Period</string>
    <string name="total">Total count</string>
    <string name="total_cost">Total cost</string>
    <string name="total_discount">Savings on discounts</string>
    <string name="average_cost">Average cost</string>
    <string name="no_data_period">No data for the selected period</string>
    <string name="title_maintenance">Maintenance and consumables</string>
    <string name="select_category">Choose category</string>
    <string name="select_subcategory">Choose subcategory</string>
    <string name="title">Title</string>
    <string name="item_brand">Brand</string>
    <string name="description">Description</string>
    <string name="item">Item</string>
    <string name="work">Work</string>
    <string name="notify_replacement">Notify about replacement</string>
    <string name="title_repair">Spare parts and repairs</string>
    <string name="repair">Repair</string>
    <string name="replacement">Replacement</string>
    <string-array name="fuel_types">
        <item>АИ-92</item>
        <item>АИ-92+</item>
        <item>АИ-95</item>
        <item>АИ-95+</item>
        <item>АИ-98</item>
        <item>АИ-98+</item>
        <item>АИ-100</item>
        <item>АИ-100+</item>
        <item>ДТ</item>
        <item>ДТ+</item>
        <item>AdBlue</item>
        <item>Methane</item>
        <item>Propane</item>
        <item>Electric</item>
    </string-array>
    <string-array name="consumables_categories">
        <item>Fluids</item>
        <item>Filters</item>
        <item>Brakes</item>
        <item>Ignition</item>
        <item>cal">Electrical</item>
        <item>Tires</item>
        <item>Glass wipers</item>
        <item>Cleaning Supplies</item>
        <item>Other</item>
    </string-array>
    <string-array name="consumables_subcategories_fluids">
        <item>Engine Oil</item>
        <item>Transmission Fluid</item>
        <item>Coolant</item>
        <item>Brake Fluid</item>
        <item>Power Steering Fluid</item>
        <item>Clutch Fluid</item>
        <item>Washer Fluid</item>
    </string-array>
    <string-array name="consumables_subcategories_filters">
        <item>Air Filter</item>
        <item>Cabin Filter</item>
        <item>Fuel Filter</item>
        <item>Oil Filter</item>
        <item>Particulate Filter</item>
    </string-array>
    <string-array name="consumables_subcategories_brakes">
        <item>Brake Pads</item>
        <item>Brake Discs</item>
        <item>Brake Drums</item>
        <item>Brake Hoses</item>
        <item>Master Cylinder</item>
    </string-array>
    <string-array name="consumables_subcategories_ignition">
        <item>Spark Plugs</item>
        <item>Glow Plugs</item>
        <item>Ignition Coils</item>
        <item>Distributor Cap</item>
    </string-array>
    <string-array name="consumables_subcategories_electrical">
        <item>Battery</item>
        <item>Fuses</item>
        <item>Light Bulbs</item>
    </string-array>
    <string-array name="consumables_subcategories_tires">
        <item>Tires</item>
        <item>Tire Valves</item>
    </string-array>
    <string-array name="parts_categories">
        <item>Engine System</item>
        <item>Transmission</item>
        <item>Suspension</item>
        <item>Exhaust System</item>
        <item>Fuel System</item>
        <item>Cooling System</item>
        <item>Electrical System</item>
        <item>Body Components</item>
        <item>Interior Components</item>
        <item>Other</item>
    </string-array>
    <string-array name="parts_subcategories_engine">
        <item>Cylinder Head</item>
        <item>Pistons and Rings</item>
        <item>Crankshaft</item>
        <item>Camshaft</item>
        <item>Timing Chain Kit</item>
        <item>Valves and Lifters</item>
        <item>Oil Pump</item>
        <item>Head Gasket</item>
        <item>Turbocharger</item>
        <item>Alternator Belt</item>
        <item>Oil Cooler</item>
    </string-array>
    <string-array name="parts_subcategories_transmission">
        <item>Gearbox</item>
        <item>Clutch Kit</item>
        <item>Differential</item>
        <item>Transfer Case</item>
        <item>Drive Shaft</item>
        <item>Shift Fork</item>
        <item>Torque Converter</item>
        <item>Transmission Seals</item>
        <item>Synchromesh Gears</item>
        <item>Transmission Bearings</item>
    </string-array>
    <string-array name="parts_subcategories_suspension">
        <item>Shock Absorbers</item>
        <item>Springs</item>
        <item>Control Arms</item>
        <item>Ball Joints</item>
        <item>Stabilizer Links</item>
        <item>Bushings</item>
        <item>Silent Blocks</item>
        <item>Wheel Bearings</item>
        <item>Strut Mounts</item>
        <item>Anti-Roll Bars</item>
    </string-array>
    <string-array name="parts_subcategories_exhaust">
        <item>Catalytic Converter</item>
        <item>Muffler</item>
        <item>Exhaust Manifold</item>
        <item>O2 Sensors</item>
        <item>Exhaust Pipes</item>
        <item>Exhaust Hangers</item>
        <item>Heat Shield</item>
        <item>Exhaust Flanges</item>
    </string-array>
    <string-array name="parts_subcategories_fuel">
        <item>Fuel Pump</item>
        <item>Fuel Injectors</item>
        <item>Fuel Tank</item>
        <item>Fuel Pressure Regulator</item>
        <item>Fuel Rail</item>
        <item>Fuel Lines</item>
        <item>Fuel Level Sensor</item>
        <item>Fine Fuel Filter</item>
    </string-array>
    <string-array name="parts_subcategories_cooling">
        <item>Radiator</item>
        <item>Water Pump</item>
        <item>Thermostat</item>
        <item>Cooling Fan</item>
        <item>Hoses</item>
    </string-array>
    <string-array name="parts_subcategories_electrical">
        <item>Alternator</item>
        <item>Starter Motor</item>
        <item>Wiring Harness</item>
        <item>ECU</item>
        <item>Sensors</item>
        <item>Relays and Control Units</item>
        <item>Ignition Coil</item>
        <item>Spark Plug Wires</item>
    </string-array>
    <string-array name="parts_subcategories_body">
        <item>Doors</item>
        <item>Fenders</item>
        <item>Bumpers</item>
        <item>Headlights</item>
        <item>Mirrors</item>
    </string-array>
</resources>