<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_account_circle"
            android:title="@string/account" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="Генерация тестовых данных" />

        <item
            android:id="@+id/nav_upload"
            android:icon="@drawable/ic_upload"
            android:title="@string/upload_server" />

        <item
            android:id="@+id/nav_download"
            android:icon="@drawable/ic_download"
            android:title="@string/download_server" />
    </group>

    <item android:title="@string/more">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:title="@string/app_info"
                android:icon="@drawable/ic_info"/>
        </menu>
    </item>
</menu>