<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="24dp"
    android:paddingVertical="16dp">

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/mileageSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/update"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/mileageETContainer"
        app:layout_constraintEnd_toEndOf="@+id/fuelPriceEditTextContainer"
        app:layout_constraintStart_toEndOf="@+id/mileageETContainer"
        app:layout_constraintStart_toStartOf="@+id/fuelPriceEditTextContainer"
        app:layout_constraintTop_toTopOf="@+id/mileageETContainer" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/mileageETContainer"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/mileage"
        app:layout_constraintEnd_toEndOf="@+id/volumeEditTextContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateTimeTextView"
        app:suffixText="@string/km">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/mileageET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number|numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/dateTimeTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:padding="4dp"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/volumeEditTextContainer"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/volume"
        app:layout_constraintEnd_toStartOf="@id/fuelPriceEditTextContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mileageETContainer"
        app:suffixText="@string/liter">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/volumeEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number|numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fuelPriceEditTextContainer"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/fuel_price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/volumeEditTextContainer"
        app:layout_constraintTop_toBottomOf="@+id/mileageETContainer"
        app:suffixText="@string/ruble">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fuelPriceEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="0123456789."
            android:inputType="numberDecimal" />

        <Spinner
            android:id="@+id/fuelTypeSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/costEditTextContainer"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/cost"
        app:suffixText="@string/ruble"
        app:layout_constraintEnd_toStartOf="@id/discountEditTextContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fuelPriceEditTextContainer">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/costEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number|numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/discountEditTextContainer"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:hint="@string/discount"
        app:suffixText="@string/ruble"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/costEditTextContainer"
        app:layout_constraintTop_toBottomOf="@+id/fuelPriceEditTextContainer">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/discountEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number|numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/cancelButton"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/cancel"
        app:layout_constraintEnd_toStartOf="@id/saveButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/costEditTextContainer" />

    <Button
        android:id="@+id/saveButton"
        style="@style/Widget.Material3.Button.TonalButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cancelButton"
        app:layout_constraintTop_toBottomOf="@+id/costEditTextContainer" />



</androidx.constraintlayout.widget.ConstraintLayout>
